--- a/cmd/goback/tpl/settings.html
+++ b/cmd/goback/tpl/settings.html
@@ -20,6 +20,9 @@
             <i class="subheader-icon fal fa-cog"></i> Settings
             <small>
                 System configuration
+                <div class="float-right">
+                    <span class="sysInfo-time" data-format="ll LTS"></span>
+                </div>
             </small>
         </h1>
     </div>
@@ -223,7 +226,7 @@
                 url: "/backup/" + id + "/run",
                 type: "GET",
             }).done(function(data) {
-                console.log(data);
+                // console.log(data);
             }).fail(function (jqXHR, textStatus, errorThrown) {
                 console.error(jqXHR);
                 Swal.fire("Error", jqXHR.responseJSON.error, "warning");
